--- a/package.json
+++ b/package.json
@@ -9,8 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "draggable": "^4.2.0",
+    "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
+    "jquery-form": "^4.3.0",
+    "jquery-nice-select": "^1.1.0",
+    "jquery-ui": "^1.13.3",
+    "jquery.appear": "^1.0.1",
+    "magnific-popup": "^1.2.0",
+    "mmenu-js": "^9.3.0",
+    "next": "14.2.4",
+    "odometer": "^0.4.8",
+    "parallax-js": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-scroll-parallax": "^3.4.5",
+    "sass": "^1.77.6",
+    "scrolltrigger": "^1.0.1",
+    "smooth-scroll": "^16.1.3",
+    "split-text": "^1.0.0",
+    "swiper": "^11.1.4",
+    "type-js": "^1.0.0",
+    "waypoints": "^4.0.1",
+    "wowjs": "^1.1.3"
   }
 }
