--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "type-js": "^1.0.0",
     "waypoints": "^4.0.1",
     "wowjs": "^1.1.3"
+  },
+  "devDependencies": {
+    "cypress": "^13.13.1"
   }
 }
